support json rendering
