# app/server/generated/models.py
@@ -1,6 +1,6 @@
 # generated by fastapi-codegen:
 #   filename:  ../../stanford-policylab/blind-charging-api/app/schema/openapi.yaml
-#   timestamp: 2024-11-11T16:03:22+00:00
+#   timestamp: 2024-12-03T02:25:55+00:00
 
 from __future__ import annotations
 
@@ -67,7 +67,30 @@ class DocumentContent(BaseModel):
     content: str
 
 
-class Document(RootModel[Union[DocumentLink, DocumentText, DocumentContent]]):
+class AttachmentType3(Enum):
+    JSON = 'JSON'
+
+
+class Content(BaseModel):
+    original: str
+    redacted: str
+
+
+class DocumentJSON(BaseModel):
+    attachmentType: Literal['JSON']
+    documentId: str
+    content: Content
+
+
+class OutputDocument(
+    RootModel[Union[DocumentLink, DocumentText, DocumentContent, DocumentJSON]]
+):
+    root: Union[DocumentLink, DocumentText, DocumentContent, DocumentJSON] = Field(
+        ..., discriminator='attachmentType'
+    )
+
+
+class InputDocument(RootModel[Union[DocumentLink, DocumentText, DocumentContent]]):
     root: Union[DocumentLink, DocumentText, DocumentContent] = Field(
         ..., discriminator='attachmentType'
     )
@@ -115,10 +138,11 @@ class OutputFormat(Enum):
     PDF = 'PDF'
     TEXT = 'TEXT'
     HTML = 'HTML'
+    JSON = 'JSON'
 
 
 class RedactionTarget(BaseModel):
-    document: Document
+    document: InputDocument
     callbackUrl: Optional[AnyUrl] = None
     targetBlobUrl: Optional[AnyUrl] = None
 
@@ -261,7 +285,7 @@ class RedactionResultSuccess(BaseModel):
     caseId: str
     inputDocumentId: str
     maskedSubjects: List[MaskedSubject]
-    redactedDocument: Document
+    redactedDocument: OutputDocument
     status: Literal['COMPLETE']
 
 
